Make favicon transparent and fix jump links

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -349,3 +349,10 @@ img {
   float:right;
   margin-right:15px;
 }
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -50px;
+    visibility: hidden;
+}
